// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanSummary renders pending cancellation date 1`] = `
<Fragment>
  <Heading
    as="h6"
    className="Headline"
    looksLike="h5"
  >
    1,000
     emails for 
    $100 per month
    <small>
       to end 
      Jun 20 2019
       when your account will be cancelled
    </small>
  </Heading>
</Fragment>
`;

exports[`PlanSummary renders summary 1`] = `
<Fragment>
  <Heading
    as="h6"
    className="Headline"
    looksLike="h5"
  >
    1,000
     emails for 
    $100 per month
  </Heading>
</Fragment>
`;

exports[`PlanSummary renders summary for free plan 1`] = `
<Fragment>
  <Heading
    as="h6"
    className="Headline"
    looksLike="h5"
  >
    1,000
     emails for 
    free
  </Heading>
</Fragment>
`;

exports[`PlanSummary renders summary with custom plan 1`] = `
<Fragment>
  <Heading
    as="h6"
    className="Headline"
    looksLike="h5"
  >
    12,000
     emails for 
    $100 per year
  </Heading>
</Fragment>
`;

exports[`PlanSummary renders summary with overages 1`] = `
<Fragment>
  <Heading
    as="h6"
    className="Headline"
    looksLike="h5"
  >
    1,000
     emails for 
    $100 per month
  </Heading>
  <p>
    $
    0.01
     per thousand extra emails
  </p>
</Fragment>
`;
